@@ -3,32 +3,28 @@ package zatribune.spring.cookmaster.data.bootstrap;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationListener;
-import org.springframework.context.annotation.Profile;
 import org.springframework.context.event.ContextRefreshedEvent;
-import org.springframework.lang.NonNull;
 import org.springframework.lang.Nullable;
 import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
 import zatribune.spring.cookmaster.data.entities.*;
-import zatribune.spring.cookmaster.data.repositories.CategoryRepository;
-import zatribune.spring.cookmaster.data.repositories.IngredientRepository;
-import zatribune.spring.cookmaster.data.repositories.RecipeRepository;
-import zatribune.spring.cookmaster.data.repositories.UnitMeasureRepository;
+import zatribune.spring.cookmaster.data.repositories.CategoryReactiveRepository;
+import zatribune.spring.cookmaster.data.repositories.RecipeReactiveRepository;
+import zatribune.spring.cookmaster.data.repositories.UnitMeasureReactiveRepository;
 
 import java.io.IOException;
 import java.math.BigDecimal;
-import java.util.*;
+import java.util.Base64;
+import java.util.List;
 
 @Slf4j
 @Component
-@Profile("default")//only active with the default profile with h2 database
 public class DevBootstrap implements ApplicationListener<ContextRefreshedEvent> {
-    private final RecipeRepository recipeRepository;
-    private final CategoryRepository categoryRepository;
-    private final UnitMeasureRepository unitMeasureRepository;
+    private final RecipeReactiveRepository recipeRepository;
+    private final CategoryReactiveRepository categoryRepository;
+    private final UnitMeasureReactiveRepository unitMeasureRepository;
 
     @Autowired
-    public DevBootstrap(RecipeRepository recipeRepository, CategoryRepository categoryRepository, UnitMeasureRepository unitMeasureRepository) {
+    public DevBootstrap(RecipeReactiveRepository recipeRepository, CategoryReactiveRepository categoryRepository, UnitMeasureReactiveRepository unitMeasureRepository) {
         log.debug("I'm at the Bootstrap phase");
         this.recipeRepository = recipeRepository;
         this.categoryRepository = categoryRepository;
@@ -40,31 +36,31 @@ public class DevBootstrap implements ApplicationListener<ContextRefreshedEvent> 
         initData();
     }
 
-    @Transactional
+
     void initData() {
         log.info("bootstrap data");
-        UnitMeasure emptyUOM=new UnitMeasure();
+        UnitMeasure emptyUOM = new UnitMeasure();
         emptyUOM.setDescription("");
-        UnitMeasure teaspoon =new UnitMeasure();
+        UnitMeasure teaspoon = new UnitMeasure();
         teaspoon.setDescription("teaspoon");
-        UnitMeasure tablespoon =new UnitMeasure("tablespoon");
+        UnitMeasure tablespoon = new UnitMeasure();
         tablespoon.setDescription("tablespoon");
-        UnitMeasure cup =new UnitMeasure();
+        UnitMeasure cup = new UnitMeasure();
         cup.setDescription("cup");
-        UnitMeasure pinch =new UnitMeasure();
+        UnitMeasure pinch = new UnitMeasure();
         pinch.setDescription("pinch");
-        UnitMeasure ounce =new UnitMeasure();
+        UnitMeasure ounce = new UnitMeasure();
         ounce.setDescription("ounce");
-        UnitMeasure dash =new UnitMeasure();
+        UnitMeasure dash = new UnitMeasure();
         dash.setDescription("dash");
 
+        unitMeasureRepository.saveAll(List.of(emptyUOM, teaspoon, tablespoon, cup, pinch, ounce, dash)).subscribe();
 
-        unitMeasureRepository.saveAll(Arrays.asList(emptyUOM,teaspoon,tablespoon,cup,pinch,ounce,dash));
-        Category american=new Category();
+        Category american = new Category();
         american.setDescription("American");
-        Category italian=new Category();
+        Category italian = new Category();
         italian.setDescription("Italian");
-        Category mexican=new Category();
+        Category mexican = new Category();
         mexican.setDescription("Mexican");
         try {
             byte[] usaBytes = DevBootstrap.class.getResourceAsStream("/static/images/usa.png").readAllBytes();
@@ -86,17 +82,18 @@ public class DevBootstrap implements ApplicationListener<ContextRefreshedEvent> 
             american.setImage(usaImage);
             italian.setImage(italyImage);
             mexican.setImage(mexicoImage);
-            categoryRepository.saveAll(Arrays.asList(american,italian,mexican));
         } catch (IOException e) {
             e.printStackTrace();
         }
-
-
+        categoryRepository.saveAll(List.of(american, italian, mexican)).subscribe();
+        american=categoryRepository.findByDescription("American").block();
+        italian=categoryRepository.findByDescription("Italian").block();
+        mexican=categoryRepository.findByDescription("Mexican").block();
         Recipe recipe1 = new Recipe();
         recipe1.setTitle("Perfect Guacamole");
         recipe1.setPrepTime(10);
         recipe1.setCookTime(15);
-        Notes notes1=new Notes("To slice open an avocado, cut it in half lengthwise with a sharp chef’s knife and twist apart the sides. One side will have the pit. To remove it, you can do one of two things:\n" +
+        Notes notes1 = new Notes("To slice open an avocado, cut it in half lengthwise with a sharp chef’s knife and twist apart the sides. One side will have the pit. To remove it, you can do one of two things:\n" +
                 "\n" +
                 "    Method #1: Gently tap the pit with your chef’s knife so the knife gets wedged into the pit. Twist your knife slightly to dislodge the pit and lift to remove. If you use this method, first protect your hand with a thick kitchen towel before proceeding.\n" +
                 "    Method #2: Cut the side with the pit in half again, exposing more of the pit. Use your fingers or a spoon to remove the pit\n" +
@@ -104,17 +101,15 @@ public class DevBootstrap implements ApplicationListener<ContextRefreshedEvent> 
                 "Once the pit is removed, just cut the avocado into chunks right inside the peel and use a spoon to scoop them out.");
         recipe1.setNotes(notes1);
         recipe1.setDifficulty(Difficulty.EASY);
-        HashSet<Category> recipe1Categories = new HashSet<>();
-        recipe1Categories.add(american);
-        recipe1Categories.add(italian);
-        recipe1.setCategories(recipe1Categories);
+        recipe1.getCategories().add(american);
+        recipe1.getCategories().add(italian);
         recipe1.setServings(4);
 
         Recipe recipe2 = new Recipe();
         recipe2.setTitle("Grilled Chicken Tacos");
         recipe2.setPrepTime(20);
         recipe2.setCookTime(25);
-        Notes notes2=new Notes("The ancho chiles I use in the marinade are named for their wide shape. They are large, have a deep reddish brown color when dried, and are mild in flavor with just a hint of heat. You can find ancho chile powder at any markets that sell Mexican ingredients, or online.\n" +
+        Notes notes2 = new Notes("The ancho chiles I use in the marinade are named for their wide shape. They are large, have a deep reddish brown color when dried, and are mild in flavor with just a hint of heat. You can find ancho chile powder at any markets that sell Mexican ingredients, or online.\n" +
                 "\n" +
                 "I like to put all the toppings in little bowls on a big platter at the center of the table: avocados, radishes, tomatoes, red onions, wedges of lime, and a sour cream sauce. I add arugula, as well – this green isn’t traditional for tacos, but we always seem to have some in the fridge and I think it adds a nice green crunch to the tacos.\n" +
                 "\n" +
@@ -123,32 +118,29 @@ public class DevBootstrap implements ApplicationListener<ContextRefreshedEvent> 
                 "You could also easily double or even triple this recipe for a larger party. A taco and a cold beer on a warm day? Now that’s living!");
         recipe2.setNotes(notes2);
         recipe2.setDifficulty(Difficulty.MODERATE);
-        HashSet<Category> recipe2Categories = new HashSet<>();
-        recipe2Categories.add(mexican);
-        recipe2.setCategories(recipe2Categories);
+        recipe2.getCategories().add(mexican);
         recipe2.setServings(3);
-            recipe1.addIngredient(new Ingredient(BigDecimal.valueOf(2), emptyUOM, "ripe advocates"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(0.25), teaspoon, "salt"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), tablespoon, "fresh lime juice or lemon juice"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "of minced red onion or thinly sliced green onion"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), emptyUOM, "serrano chiles, stems and seeds removed, minced"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "cilantro (leaves and tender stems), finely chopped"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), emptyUOM, "freshly grated black peppe"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(0.5), emptyUOM, "ripe tomato, seeds and pulp removed, chopped"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(0), emptyUOM, "Red radishes or jicama, to garnish"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(0), emptyUOM, "Tortilla chips, to serve"));
+        recipe1.addIngredient(new Ingredient(BigDecimal.valueOf(2), emptyUOM, "ripe advocates"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(0.25), teaspoon, "salt"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), tablespoon, "fresh lime juice or lemon juice"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "of minced red onion or thinly sliced green onion"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), emptyUOM, "serrano chiles, stems and seeds removed, minced"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "cilantro (leaves and tender stems), finely chopped"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), emptyUOM, "freshly grated black peppe"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(0.5), emptyUOM, "ripe tomato, seeds and pulp removed, chopped"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(0), emptyUOM, "Red radishes or jicama, to garnish"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(0), emptyUOM, "Tortilla chips, to serve"));
 
-            recipe2.addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "ancho chili powder"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), teaspoon, "dried oregano"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), teaspoon, "dried cumin"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), teaspoon, "sugar"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(0.5), teaspoon, "salt"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), emptyUOM, "clove garlic, finely chopped"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(1), tablespoon, "finely grated orange zest"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(3), tablespoon, "fresh-squeezed orange juice"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "olive oil"))
-                    .addIngredient(new Ingredient(BigDecimal.valueOf(4), emptyUOM, "skinless, boneless chicken thighs "));
-
+        recipe2.addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "ancho chili powder"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), teaspoon, "dried oregano"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), teaspoon, "dried cumin"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), teaspoon, "sugar"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(0.5), teaspoon, "salt"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), emptyUOM, "clove garlic, finely chopped"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(1), tablespoon, "finely grated orange zest"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(3), tablespoon, "fresh-squeezed orange juice"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(2), tablespoon, "olive oil"))
+                .addIngredient(new Ingredient(BigDecimal.valueOf(4), emptyUOM, "skinless, boneless chicken thighs "));
 
 
         recipe1.setDirections("1 Cut the avocado, remove flesh: Cut the avocados in half. Remove the pit. Score the inside of the avocado with a blunt knife and scoop out the flesh with a spoon. (See How to Cut and Peel an Avocado.) Place in a bowl.\n" +
@@ -189,6 +181,6 @@ public class DevBootstrap implements ApplicationListener<ContextRefreshedEvent> 
             e.printStackTrace();
         }
 
-        recipeRepository.saveAll(Arrays.asList(recipe1, recipe2));
+        recipeRepository.saveAll(List.of(recipe1, recipe2)).subscribe();
     }
 }
